[package]
name = "smith-ssh"
version = "0.1.2"
authors = ["Mark Hibberd <mark@hibberd.id.au>"]
edition = "2018"
license = "BSD-3-Clause"
homepage = "https://smith.st"
repository = "https://github.com/smith-security/smith.rs"
description = "Smith client. Command line tools for interacting with https://smith.st services."
categories = ["api-bindings", "command-line-utilities", "authentication"]

[dependencies]
base64 = "0.10.1"
biscuit = "0.2.0"
byteorder = "1.3.2"
clap = "2.33.0"
dirs = "2.0.1"
exec = "0.3.1"
num-bigint = "0.2.2"
openssl = "0.10.23"
reqwest = "0.9.16"
ring = "0.14.6"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.39"
untrusted = "0.6.2"
yasna = { version = "0.3.1", features = ["num-bigint"] }
whoami = "0.5.2"

[features]
cli-test = []
